# figma-mcp

./: .pre-commit-config.yaml  .railwayignore  ARCHITECTURE.md  AUTOMATION.md  AUTOMATION_QUICK_START.txt  AUTOMATION_SETUP.md  BUILD_SUMMARY.md  CODE_OF_CONDUCT.md  CODE_REVIEW_GUIDE.md  CONFIG.md  CONTRIBUTING.md  CONTRIBUTORS_GUIDE.txt  CRITICAL_NEXT_STEPS.md  DEPLOYMENT.md  Dockerfile  ECOSYSTEM_INTEGRATION.md  EXTENSION_OPPORTUNITIES.md  EXTENSION_QUICK_REFERENCE.txt  FUNDRAISING.md  HERMES_INTEGRATION_PR.md  HERMES_TESTING_GUIDE.md  LICENSE  Makefile  PUSH_GUIDE.md  Procfile  QUICKSTART.txt  RAILWAY_DEPLOYMENT.md  README.md  REVIEWER_GUIDE.md  ROADMAP.md  SETUP_FUNDRAISING.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-review.yml  community.yml  dependencies.yml  docker.yml  health.yml  release.yml  security.yml
figma_mcp/: __init__.py  client.py  server.py  web_server.py
figma_mcp/tools/: __init__.py
scripts/: code-review-checklist.py  create-templates.sh  monitor-hermes.py  setup-automation.sh  test-hermes-integration.sh
tests/: conftest.py  test_client.py
