[build-system]
requires = ["setuptools>=83.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "figma-mcp"
version = "0.1.0"
description = "Figma MCP Server - Model Context Protocol integration for Figma API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Figma MCP Contributors", email = "dev@figma-mcp.local"}
]
keywords = ["mcp", "figma", "api", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/jozrftamson/figma-mcp"
Documentation = "https://github.com/jozrftamson/figma-mcp#readme"
Repository = "https://github.com/jozrftamson/figma-mcp.git"
Issues = "https://github.com/jozrftamson/figma-mcp/issues"
Funding = "https://opencollective.com/figma-mcp"
Sponsors = "https://github.com/sponsors/jozrftamson"

[project.scripts]
figma-mcp = "figma_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["figma_mcp*"]
